2008-05-23  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-base-0.10/:

	Fix the newsegment virtual method in GstBaseSrc, move the
	GST_BASE_TRANSFORM_* constants to the GstBaseTransform class,
	fix weak fields in GstBase*, and hide the abidata fields,
	patch by Ali Sabil

	* vapi/gstreamer-base-0.10.vapi: regenerated

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Improve the GstBuffer binding, base class fixes in metadata,
	patch by Ali Sabil, fixes bug 510693 and bug 533011

	* vapi/gstreamer-0.10.vapi: regenerated

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeclassbinding.vala:

	Support [DBus (visible = false)] for methods, properties, and
	signals, based on patch by Ali Sabil, fixes bug 532254

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* vapi/dbus-glib-1.vapi: add DBus.ObjectPath class

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* vapi/sdl.vapi: fix syntax errors

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* THANKS: thank contributors

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add GLogFunc and g_log_set_handler bindings,
	patch by Nicolas Joseph, fixes bug 533601

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gnome-keyring-1/: nullable fixes,
	patch by Andrea Del Signore, fixes bug 533278

	* vapi/gnome-keyring-1.vapi: regenerated

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Fix private class fields, patch by Jared Moore, fixes bug 532898

	* tests/classes-fields.vala:

	Test class fields

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:

	Allow invocation of void methods as initializer and iterator in
	for statements, patch by Jared Moore, fixes bug 514801

	* tests/Makefile.am:
	* tests/statements-iteration.exp:
	* tests/statements-iteration.vala:

	Test void methods in for statements

2008-05-22  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am:
	* vapi/tiff.vapi:
