@@ -1,2 +1,3 @@
 gstreamer-0.10
 gstreamer-base-0.10
+gmodule-2.0
