@@ -2,3 +2,16 @@ Gst cprefix="Gst" lower_case_cprefix="gst_" cheader_filename="gst/video/video.h"
 GstVideoRectangle cheader_filename="gst/video/gstvideosink.h"
 GstVideoSink cheader_filename="gst/video/gstvideosink.h"
 GstVideoFilter cheader_filename="gst/video/gstvideofilter.h"
+GST_VIDEO_* hidden="1"
+gst_video_calculate_display_ratio.dar* is_ref="1"
+gst_video_format_convert.dest_value is_ref="1"
+gst_video_format_get_*.component is_ref="1"
+gst_video_format_get_*.width is_ref="1"
+gst_video_format_get_*.height is_ref="1"
+gst_video_format_parse_caps.format is_ref="1"
+gst_video_format_parse_caps.width is_ref="1"
+gst_video_format_parse_caps.height is_ref="1"
+gst_video_parse_caps_framerate.fps_* is_ref="1"
+gst_video_parse_caps_pixel_aspect_ratio.par_* is_ref="1"
+gst_video_get_size.width is_ref="1"
+gst_video_get_size.height is_ref="1"
